chore: fixed mobile hamburger button, footer spacing, header spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,6 +46,9 @@ body {
         border: 0.5px solid black;
         border-radius: 5px;
     }
+    .blank-spacing-div, .mobile-menu-container {
+        width: 25%;
+    }
     /* Top section */
     .top-section {
         padding: 30px 0 20px 0;
@@ -132,6 +135,9 @@ body {
         background-color: rgb(227, 234, 240);
     }
     /* Footer styles */
+    footer {
+        margin-top: 30px;
+    }
     h3, .footer-link, .address-paragraph {
         text-align: center;
         font-size: 1.2rem;
